# Autonomous-Mobile-Robot-Welderr

./: README.md  crack.py
wpi_ur5/: CMakeLists.txt  package.xml
wpi_ur5/src/: i2pwithoutclass.cpp  image2points.cpp  imageToPoints.py  move_group_lel.cpp  move_group_ur5.cpp  move_group_ur5.launch  oldmovegroup.cpp  pathfinder.py
